# Solitaire

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Shaders/: CardShader.hlsl
Source/: Application.cpp  Application.h  Box.cpp  Box.h  Clock.cpp  Clock.h  KlondikeSolitaireGame.cpp  KlondikeSolitaireGame.h  Main.cpp  SolitaireGame.cpp  SolitaireGame.h  SpiderSolitaireGame.cpp  SpiderSolitaireGame.h  Utils.cpp  Utils.h
Source/SolitaireGames/: FreeCellSolitaireGame.cpp  FreeCellSolitaireGame.h  KlondikeSolitaireGame.cpp  KlondikeSolitaireGame.h  SpiderSolitaireGame.cpp  SpiderSolitaireGame.h
Textures/: 10_of_clubs.dds  10_of_diamonds.dds  10_of_hearts.dds  10_of_spades.dds  2_of_clubs.dds  2_of_diamonds.dds  2_of_hearts.dds  2_of_spades.dds  3_of_clubs.dds  3_of_diamonds.dds  3_of_hearts.dds  3_of_spades.dds  4_of_clubs.dds  4_of_diamonds.dds  4_of_hearts.dds  4_of_spades.dds  5_of_clubs.dds  5_of_diamonds.dds  5_of_hearts.dds  5_of_spades.dds  6_of_clubs.dds  6_of_diamonds.dds  6_of_hearts.dds  6_of_spades.dds  7_of_clubs.dds  7_of_diamonds.dds  7_of_hearts.dds  7_of_spades.dds  8_of_clubs.dds  8_of_diamonds.dds  8_of_hearts.dds  8_of_spades.dds  9_of_clubs.dds  9_of_diamonds.dds  9_of_hearts.dds  9_of_spades.dds  ace_of_clubs.dds  ace_of_diamonds.dds  ace_of_hearts.dds  ace_of_spades.dds  (+29 more)
